Fix layout issue with centered container

--- a/public/commons.css
+++ b/public/commons.css
@@ -73,6 +73,9 @@ input:focus-visible {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.centered > p {
   text-align: center;
 }
 
